# lib-maptial

./: .gitignore  README.md  all-documents.html  apidocs-help.html  classIndex.html  fullsearchindex.json  index.html  maptial.geo.geocalculator.html  maptial.geo.html  maptial.geo.pdbcontacts.ContactMaker.html  maptial.geo.pdbcontacts.GeometryRow.html  maptial.geo.pdbcontacts.html  maptial.geo.pdbgeometry.GeometryMaker.html  maptial.geo.pdbgeometry.GeometryRow.html  maptial.geo.pdbgeometry.html  maptial.geo.pdbloader.PdbLoader.html  maptial.geo.pdbloader.html  maptial.geo.pdbobject.PdbAtom.html  maptial.geo.pdbobject.PdbObject.html  maptial.geo.pdbobject.PdbResidue.html  maptial.geo.pdbobject.html  maptial.geo.pdbspace.html  maptial.geo.reportmaker.ReportMaker.html  maptial.geo.reportmaker.html  maptial.html  maptial.map.atom.Atom.html  maptial.map.atom.html  maptial.map.html  maptial.map.mapfunctions.MapFunctions.html  maptial.map.mapfunctions.html  maptial.map.maploader.MapLoader.html  maptial.map.maploader.html  maptial.map.mapobject.MapObject.html  maptial.map.mapobject.html  maptial.map.mapplothelp.MapPlotHelp.html  maptial.map.mapplothelp.html  maptial.map.mapplotter.MapPlotter.html  maptial.map.mapplotter.html  maptial.map.mapsmanager.MapsManager.html  maptial.map.mapsmanager.html  (+64 more)
src/examples/: tst_2d3d.py
src/examples/geo/: tst_pdb_info3.py
src/examples/map/: tst_2d3d.py  tst_criticalpoint.py  tst_criticalpoint_1ejg.py  tst_criticalpoint_7uly.py  tst_criticalpoint_linear.py  tst_projection.py
src/maptial/geo/: pdbcontacts.py  pdbgeometry.py  pdbloader.py  pdbobject.py
src/maptial/map/: mapfunctions.py  maploader.py  mapplothelp.py  mapplotter.py  mapsmanager.py  pdbobject.py
src/maptial/pol/: interpolator.py  iteration.py  scoring.py  xthevenaz.py
src/maptial/xyz/: crstransform.py  gridmaker.py  matrix3d.py  matrixthree.py  matrixthreex.py  matrixthreey.py  spacetransform.py
src/tests/: test_01_works.py
