[metadata]
name = maptial
version = 0.0.8
author = Rachel Alcraft
author_email = rachelalcraft@gmail.com
description = Library to calculate density and potential maps from protein structures, and to calculate geoemetric properties of protein structures.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rae-gh/lib-maptial
project_urls =
    Bug Tracker = https://github.com/rae-gh/lib-maptial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
